--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "code-analysis-tool"
-version = "1.0.1"
+version = "1.0.2"
 description = "A comprehensive Python code analysis tool that generates code maps and detects issues"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -40,7 +40,7 @@ dev = [
 ]
 
 [project.scripts]
-code-analysis = "code_analysis.cli:main"
+code_mapper = "code_analysis.cli:main"
 
 [tool.black]
 line-length = 88
