feat: Introduce server management enhancements and configuration updates
- Added a PID file for the code-analysis server to manage process IDs.
- Updated server host configuration from "0.0.0.0" to "172.28.0.1" for better network isolation.
- Introduced process management settings, including a shutdown grace period.
- Enhanced the main application description with detailed command usage instructions.
- Added a new CLI script for managing the code-analysis server as a daemon.
- Improved error handling and logging in various components for better diagnostics.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "server": {
-    "host": "0.0.0.0",
+    "host": "172.28.0.1",
     "port": 15000,
     "protocol": "mtls",
     "servername": "code-analysis-server",
@@ -95,8 +95,11 @@
     "verify_client": true,
     "chk_hostname": false
   },
+  "process_management": {
+    "shutdown_grace_seconds": 10.0
+  },
   "code_analysis": {
-    "host": "0.0.0.0",
+    "host": "172.28.0.1",
     "port": 15000,
     "log": "logs/code_analysis.log",
     "db_path": "data/code_analysis.db",
