Step 0: Add db_access.worker_only configuration flag
- Add DatabaseAccessConfig model with worker_only and driver fields
- Add db_access field to ServerConfig with defaults (worker_only=True, driver=sqlite_proxy)
- Update config.json with db_access section
- Configuration enables strict mode: only DB worker may access SQLite directly

Ref: docs/REFACTOR_DB_ACCESS_VIA_WORKER_PLAN.md Step 0

--- a/config.json
+++ b/config.json
@@ -104,6 +104,10 @@
     "log": "logs/code_analysis.log",
     "db_path": "data/code_analysis.db",
     "dirs": [],
+    "db_access": {
+      "worker_only": true,
+      "driver": "sqlite_proxy"
+    },
     "chunker": {
       "enabled": true,
       "url": "localhost",
