feat: Enhance configuration management and add new commands
- Updated `config.json` to include additional watch directories for improved monitoring.
- Introduced `FindDuplicatesMCPCommand` for detecting duplicate code segments.
- Added `ComprehensiveAnalysisMCPCommand` to perform extensive code analysis.
- Implemented a CLI interface for configuration generation and validation.
- Created a comprehensive `ComprehensiveAnalyzer` for multi-faceted code checks.
- Added database support for tracking code duplicates and analysis results.
- Enhanced logging and error handling across new commands and modules.
- Updated documentation to reflect new features and installation instructions.
- Added scripts for building and installing the Debian package.
- Included negative test cases for configuration generator and validator.

--- a/config.json
+++ b/config.json
@@ -142,7 +142,9 @@
       "retry_attempts": 3,
       "retry_delay": 10.0,
       "watch_dirs": [
-        "/home/vasilyvz/projects/tools/code_analysis"
+        "/home/vasilyvz/projects/tools/code_analysis",
+        "/home/vasilyvz/projects/tools/code_analysis/test_data/code_analysis_test",
+        "/home/vasilyvz/projects/vast_srv"
       ],
       "dynamic_watch_file": "data/dynamic_watch_dirs.json",
       "log_path": "logs/vectorization_worker.log",
