Enhance project discovery and configuration management
- Introduced a new project discovery module to automatically detect projects by scanning for `projectid` files within specified directories.
- Updated `config.json` to include a `check_hostname` parameter for SSL/TLS connections.
- Refactored file watcher and related commands to support multi-project detection and improved project management.
- Added integration tests for the new project discovery functionality to ensure proper detection and handling of nested projects.
- Removed obsolete documentation files and streamlined command inventory scripts.

--- a/config.json
+++ b/config.json
@@ -115,7 +115,8 @@
       "crl_file": null,
       "retry_attempts": 3,
       "retry_delay": 5.0,
-      "timeout": 60.0
+      "timeout": 60.0,
+      "check_hostname": false
     },
     "embedding": {
       "enabled": true,
@@ -128,7 +129,8 @@
       "crl_file": null,
       "retry_attempts": 3,
       "retry_delay": 5.0,
-      "timeout": 60.0
+      "timeout": 60.0,
+      "check_hostname": false
     },
     "faiss_index_path": "data/faiss_index.bin",
     "vector_dim": 384,
