--- a/config.json
+++ b/config.json
@@ -144,7 +144,10 @@
       "retry_attempts": 3,
       "retry_delay": 10.0,
       "watch_dirs": [
-        "/home/vasilyvz/projects/tools/code_analysis/test_data"
+        {
+          "id": "550e8400-e29b-41d4-a716-446655440001",
+          "path": "/home/vasilyvz/projects/tools/code_analysis/test_data"
+        }
       ],
       "dynamic_watch_file": "data/dynamic_watch_dirs.json",
       "log_path": "logs/vectorization_worker.log",
