Fix CST commands: rebuild index after modification, add target_node_id support, improve error messages
- КРИТИЧНО: Добавлена перестройка индекса после модификации дерева
- Добавлена поддержка target_node_id для insert операции (вставка после конкретного узла)
- Добавлена функция _find_parent_for_node для автоматического поиска parent
- Улучшены сообщения об ошибках с контекстом (показывают доступные узлы)
- Исправлена логика замены SimpleStatementLine на несколько statements
- Исправлена логика вставки в IndentedBlock
- Обновлена schema команды cst_modify_tree для поддержки target_node_id
- Все изменения протестированы (black, flake8, импорты)

--- a/config.json
+++ b/config.json
@@ -177,7 +177,13 @@
       "ignore_patterns": [
         "**/__pycache__/**",
         "**/.git/**",
-        "**/node_modules/**"
+        "**/node_modules/**",
+        "**/.venv/**",
+        "**/venv/**",
+        "**/env/**",
+        "**/ENV/**",
+        "**/env.bak/**",
+        "**/venv.bak/**"
       ],
       "log_rotation": {
         "max_bytes": 10485760,
