--- a/config.json
+++ b/config.json
@@ -132,6 +132,18 @@
       "timeout": 60.0,
       "check_hostname": false
     },
+    "database": {
+      "driver": {
+        "type": "sqlite_proxy",
+        "config": {
+          "path": "data/code_analysis.db",
+          "worker_config": {
+            "command_timeout": 30.0,
+            "poll_interval": 0.1
+          }
+        }
+      }
+    },
     "faiss_index_path": "data/faiss_index.bin",
     "vector_dim": 384,
     "min_chunk_length": 30,
