feat(timing): enhance logging capabilities for operation durations and add new command for analyzing timing bottlenecks
- Updated configuration timeouts for improved performance.
- Introduced AnalyzeTimingBottlenecksMCPCommand to collect and report bottlenecks from worker logs.
- Added logging for operation durations across various components to facilitate bottleneck analysis.
- Enhanced vectorization worker and chunking processes with timing logs for better performance insights.
- Updated documentation to reflect changes in command parameters and logging features.

--- a/config.json
+++ b/config.json
@@ -115,7 +115,7 @@
       "crl_file": null,
       "retry_attempts": 3,
       "retry_delay": 5.0,
-      "timeout": 60.0,
+      "timeout": 600.0,
       "check_hostname": false
     },
     "embedding": {
@@ -129,7 +129,7 @@
       "crl_file": null,
       "retry_attempts": 3,
       "retry_delay": 5.0,
-      "timeout": 60.0,
+      "timeout": 120.0,
       "check_hostname": false
     },
     "database": {
@@ -152,7 +152,9 @@
     "worker": {
       "enabled": true,
       "poll_interval": 30,
-      "batch_size": 10,
+      "batch_size": 5,
+      "max_files_per_pass": 30,
+      "log_all_operations_timing": true,
       "retry_attempts": 3,
       "retry_delay": 10.0,
       "watch_dirs": [
